update a fix for text alignment by using padding

--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -10,8 +10,8 @@
 .NavigationItem a {
   color: aliceblue;
   text-decoration: none;
-  height: 100%;
-  padding: 0px 10px;
+  /* height: 100%; */
+  padding: 20px 10px;
   border-bottom: 4px solid transparent;
   display: block;
 }
